fix close handle overflowing

--- a/src/stylesheets/notifications.less
+++ b/src/stylesheets/notifications.less
@@ -2,6 +2,8 @@
     position: absolute;
     z-index: 1;
 
+    overflow: hidden;
+
     width: 100%;
 
     border-top: 1px solid rgba(0, 0, 0, .1);
@@ -31,10 +33,10 @@
 
             color: #808080;
         }
-        &:hover {
-            .sk-notification-close {
-                display: block;
-            }
+    }
+    &:hover {
+        .sk-notification-close {
+            display: block;
         }
     }
 }
